# reminder_codex

./: .gitignore  README.md  _board_speaker.py  _board_tts_player.py  _commit_msg.txt  _set_vol_163.py  _speaker_runner.py  _test_163.py  _test_amixer.py  _test_speak.py  _tts_capture.sh  _tts_doubao.py  _write_runner.py  architecture_时序图.html  run.bat
backend/: config.py  database.py  index.html  main.py  player.py  requirements.txt  server_stdlib.py
backend/models/: reminder.py
backend/routes/: board.py  board_scheduler.py  presence.py  reminders.py
backend/services/: scheduler.py  tts.py
board_backup_20260629/: README.md
board_backup_20260629/home/cat/: watchdog.sh  (+10 more)
board_backup_20260629/home/cat/ros2_ws/src/: CMakeLists.txt  README.md  setup.py
board_backup_20260629/home/cat/ros2_ws/src/config/: reminder_bt_config.yaml
board_backup_20260629/home/cat/ros2_ws/src/config/trees/: nodes_metadata.xml  reminder_bt_v3.xml
board_backup_20260629/home/cat/ros2_ws/src/docs/: GROOT2_DEBUGGING.md
board_backup_20260629/home/cat/ros2_ws/src/include/robot_reminder_bt/: reminder_nodes.hpp
board_backup_20260629/home/cat/ros2_ws/src/launch/: reminder_bt.launch.py
board_backup_20260629/home/cat/ros2_ws/src/robot_aipet_relay/: package.xml  setup.py
board_backup_20260629/home/cat/ros2_ws/src/robot_aipet_relay/launch/: relay.launch.py
board_backup_20260629/home/cat/ros2_ws/src/robot_aipet_relay/robot_aipet_relay/: relay_node.py
board_backup_20260629/home/cat/ros2_ws/src/robot_floor_seg/: package.xml  setup.cfg  setup.py
board_backup_20260629/home/cat/ros2_ws/src/robot_floor_seg/config/: params.yaml
board_backup_20260629/home/cat/ros2_ws/src/robot_floor_seg/launch/: seg.launch.py
board_backup_20260629/home/cat/ros2_ws/src/robot_floor_seg/resource/: robot_floor_seg
board_backup_20260629/home/cat/ros2_ws/src/robot_floor_seg/robot_floor_seg/: __init__.py  rknn_infer.py  seg_node.py  web_server.py
board_backup_20260629/home/cat/ros2_ws/src/robot_floor_seg/test/: test_copyright.py
board_backup_20260629/home/cat/ros2_ws/src/robot_reminder_bt/: __init__.py  setup.cfg  setup.py
board_backup_20260629/home/cat/ros2_ws/src/robot_reminder_bt/launch/: reminder_bt_v2.launch.py
board_backup_20260629/home/cat/ros2_ws/src/robot_reminder_bt/robot_reminder_bt/: groot2_server_v2.py  reminder_auto_node.py  reminder_bt_node_v2.py  reminder_bt_nodes.py
board_backup_20260629/home/cat/ros2_ws/src/scripts/: run_board.sh  run_windows.bat
board_backup_20260629/home/cat/ros2_ws/src/src/: reminder_bt_main.cpp  reminder_nodes.cpp
board_backup_20260629/home/cat/ros2_ws/src/test/: test_bt_local.py
board_backup_20260629/home/cat/talk_with/ros_ws/install/bt_relay/share/bt_relay/: local_setup.sh  package.ps1  package.sh  package.xml
board_backup_20260629/home/cat/talk_with/ros_ws/install/bt_relay/share/bt_relay/trees/: relay_task.xml
board_backup_20260629/home/cat/talk_with/ros_ws/install/robot_aipet_relay/share/robot_aipet_relay/: package.ps1  package.sh  package.xml
board_backup_20260629/home/cat/talk_with/ros_ws/install/robot_aipet_relay/share/robot_aipet_relay/launch/: relay.launch.py
board_backup_20260629/opt/ros/humble/share/robot_audio_node/: local_setup.sh  package.ps1  package.sh  package.xml
board_backup_20260629/opt/ros/humble/share/robot_audio_node/config/: robot_audio_node.yaml
board_backup_20260629/opt/ros/humble/share/robot_audio_node/launch/: robot_audio_node.launch.py
board_backup_20260629/opt/ros/humble/share/robot_audio_node/msg/: AudioCmd.msg
board_backup_20260629/opt/ros/humble/share/robot_audio_node/srv/: GetVolume.srv  GetVolume_Response.msg  SetVolume.srv  SetVolume_Request.msg
board_backup_20260629/opt/ros/humble/share/robot_doubao_tts_node/: package.ps1  package.sh  package.xml
board_backup_20260629/opt/ros/humble/share/robot_doubao_tts_node/config/: tts_config.yaml
board_backup_20260629/opt/ros/humble/share/robot_doubao_tts_node/launch/: tts.launch.py  tts_patched.launch.py
board_backup_20260629/opt/ros/humble/share/robot_voice_bridge/: local_setup.sh  package.ps1  package.sh  package.xml
board_backup_20260629/opt/ros/humble/share/robot_voice_bridge/action/: Speak.action
board_backup_20260629/opt/ros/humble/share/robot_voice_bridge/config/: voice_bridge_config.yaml
board_backup_20260629/opt/ros/humble/share/robot_voice_bridge/launch/: all_nodes.launch.py  voice_bridge.launch.py
deploy/: _add_flask_endpoint.py  _build_ros.py  _check_build.py  _check_rclpy.py  _check_ros.py  _check_ros2.py  _check_url.py  _final_setup.py  _final_start.py  _install_rclpy.py  _install_ros_pkg.py  _restart_ws.py  _test_flow.py  deploy.sh  deploy_ws_client.py
docs/: blackboard_bug_fix.md
frontend/: index.html
frontend/css/: style.css
frontend/js/: app.js
management/: deleted_ids.json  index.html  reminders.json  run.bat  server.py  stderr.txt
new_protocol/: AI-Pet-App-HTTP-API-协议文档(1).md  AI-Pet-App-HTTP-API-协议文档(2).md  AI-Pet-WebSocket-协议文档(2).md  ROSS_PACKAGE_SPEC.md
robot_aipet_relay/: package.xml  setup.cfg  setup.py
robot_aipet_relay/launch/: relay.launch.py
robot_aipet_relay/robot_aipet_relay/: relay_node.py
robot_reminder/: .gitignore  README.md  board_ws_client.py  package.xml  requirements.txt  setup.cfg  setup.py
robot_reminder/config/: reminder_params.yaml
robot_reminder/launch/: reminder.launch.py
robot_reminder/robot_reminder/: reminder_node.py
robot_reminder_bt/: README.md  __init__.py  _call_voice.py  bt_engine.py  groot2_server.py  package.xml  reminder_bt_driver.py  reminder_bt_nodes.py  setup.py
robot_reminder_bt/launch/: reminder_standalone.launch.py
robot_reminder_bt/robot_reminder_bt/: aipet_reminder_node.py  reminder_ws_daemon.py
robot_reminder_bt/scripts/: check_ws_daemon.py
robot_websocket/: .gitignore  README.md  package.md  package.xml  requirements.txt  setup.cfg  setup.py
simulation/: app_simulator.py  device_simulator.py
speaker/: README.md
test/: test_reminder_flow.py
tools/: bt_monitor_server.py  viewer_server.py
web8010/: err.txt  index.html  server.py
板子文件备份/: README_启动说明.md
(+56 files in other folders)
