<?xml version="1.0"?>
<package format="3">
  <name>robot_aipet_relay</name>
  <version>0.0.0</version>
  <description>AI Pet 板端 WebSocket 传话节点 - 连接服务器并转发指令到行为树</description>
  <maintainer email="cat@robot.local">cat</maintainer>
  <license>MIT</license>
  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
