<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd"
            schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>robot_reminder</name>
  <version>0.0.0</version>
  <description>待办事提醒 ROS2 节点，支持 TTS 语音播报</description>
  <maintainer email="cat@rk3576.local">cat</maintainer>
  <license>MIT</license>
  <build_type>ament_python</build_type>
  <depend>rclpy</depend>
  <depend>std_msgs</depend>
</package>
