<?xml version="1.0"?>
<package format="3">
  <name>robot_reminder_bt</name>
  <version>0.0.0</version>
  <description>提醒系统行为树节点</description>
  <maintainer email="cat@robot.local">cat</maintainer>
  <license>MIT</license>
  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
