<?xml version='1.0' encoding='utf-8'?>
<package format="3">
  <name>robot_doubao_tts_node</name>
  <version>0.0.4</version>
  <description>Doubao TTS speech synthesis ROS2 node</description>
  <maintainer email="cat@dahuan.com">cat</maintainer>
  <license>Apache-2.0</license>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>robot_interface</depend>

  
  <exec_depend>websockets</exec_depend>

  

    <depend>robot_utils</depend>
  <export>
    <build_type>ament_python</build_type>
  </export>
</package>