<?xml version='1.0' encoding='utf-8'?>
<package format="3">
  <name>robot_voice_bridge</name>
  <version>0.0.3</version>
  <description>Voice bridge with action interface, priority queue, and resume support</description>
  <maintainer email="cat@dahuan001.com">cat</maintainer>
  <license>Proprietary</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclcpp_action</depend>
  <depend>std_msgs</depend>
  <depend>robot_audio_node</depend>
  <depend>robot_interface</depend>

  <exec_depend>rosidl_default_runtime</exec_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>