<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypesets="g"?>
<package format="3">
  <name>robot_aipet_relay</name>
  <version>0.0.1</version>
  <description>AI Pet 板端 WebSocket 传话节点 — 与服务器长连接，接收并响应传话消息</description>
  <maintainer email="cat@aipet.local">cat</maintainer>
  <license>MIT</license>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>robot_voice_bridge</depend>

  <exec_depend>python3-websocket-client</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
